--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,71 +1,11 @@
 <!DOCTYPE html>
 <html class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-    <link rel="icon" href="assets/icon/tab-icon.png" type="image/png" />
-
-    <title>Ahadi</title>
-    <style>
-      body {
-        font-family: Poppins;
-        /* height: 5000px; */
-      }
-
-      button > h6 {
-        font-size: 15px;
-        color: rgb(66, 66, 66);
-      }
-    </style>
+{{> head }}
   </head>
   <body id="home" class="pt-16 ps-15 pe-15">
-    <!-- Awal Navbar -->
-    <nav class="bg-white border-gray-200 fixed top-0 left-0 w-full h-16 z-50">
-      <div class="flex justify-between p-2 ml-6">
-        <a href="#home" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <span class="text-2xl font-bold whitespace-nowrap text-white bg-black">AH</span>
-        </a>
-        <div class="mt-2 w-full md:block md:w-auto flex text-sm" id="navbar-default">
-          <ul class="font-medium flex flex-col items-center p-4 md:p-0 md:flex-row md:space-x-6 rtl:space-x-reverse md:mt-0 md:border-0">
-            <li>
-              <a href="#tech-stack" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Tech Stack</a>
-            </li>
-            <li>
-              <a href="#experience" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Experience</a>
-            </li>
-            <li>
-              <a href="#my-project" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Projects</a>
-            </li>
-            <li>
-              <a target="_blank" href="https://wa.me/6283891495814" class="flex align-middle text-white bg-green-500 hover:bg-green-600 rounded-lg text-sm px-4 py-2">
-                <img class="" src="assets/icon/wa.svg" alt="" width="15px" />
-                &nbsp Let's Talk
-              </a>
-            </li>
-            <li>
-              <button download src="assets/img/mentor.png" class="download flex align-middle text-white bg-black hover:bg-gray-800 rounded-lg text-sm px-4 py-2 me-3">
-                <img src="assets/icon/download.png" alt="" class="flex align-middle" width="15px" height="20px" />
-                &nbsp Download CV
-              </button>
-            </li>
-            <li>
-              <button class="me-9 flex">
-                <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z" />
-                </svg>
-              </button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Akhir Navbar -->
+{{> navbar}}
 
-    <!-- Hero Section Start -->
+`    <!-- Hero Section Start -->
     <section class="pt-30">
       <div class="container">
         <div class="flex alex-wrap">
@@ -534,22 +474,6 @@
     </div>
     <!-- Build Together Session End -->
 
-    <!-- Footer -->
-    <Footer class="mt-40">
-      <hr class="text-gray-200 font-medium">
-      <div class="justify-center text-gray-600 text-center mt-8 text-sm">
-       <p>&copy; <script>document.write(new Date().getFullYear());</script> Designed and coded with ❤️ by Ahadi</p>
-      </div>
-      <div class="flex justify-center mt-4 space-x-3 mb-8">
-        <a href="https://github.com/ahaydeid" target="_blank">
-          <img src="assets/icon/github.png" alt=""  class="w-5">
-        </a>
-        <a href="">
-          <img src="assets/icon/linkedin.png" alt=""  class="w-5">
-        </a>
-       </div>
-    </Footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+{{> footer }}
   </body>
 </html>
