--- a/src/views/manageStack.hbs
+++ b/src/views/manageStack.hbs
@@ -13,7 +13,7 @@ table, th, td {
     {{> navbarAdmin}}
 
     <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">MANAGE STACK</h1>
-    <div class="container w-3xl ms-3 h-200 p-5 bg-white mt-20">
+    <div class="container w-3xl ms-3 p-5 bg-white mt-20">
       <form action="" class="bg-white h-20 flex items-center mb-3" enctype="multipart/form-data" method="post">
         <div class="upload items-center flex">
         <input name="stack-icon" class="h-10 me-1 text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none" id="file_input" type="file">
@@ -28,16 +28,17 @@ table, th, td {
                 <th>Description</th> 
                 <th class="w-[150px]">Action</th>
             </tr>
+            {{#each hasil }}
             <tr class="">
-                <td class="text-center">1</td>
-                <td class=""><img src="../assets/icon/account.png" class="w-10" alt=""></td>
-                <td class="">HTML</td>
+                <td class="text-center">{{ increment @index }}</td>
+                <td class=""><img src="/assets/tech/{{ this.icon_tech }}" class="w-10" alt=""></td>
+                <td class="">{{ this.name_tech }}</td>
                 <td class="text-center">
                     <button class="px-3 bg-yellow-500 m-1 text-white cursor-pointer">Edit</button>
                     <button  class="px-3 bg-red-700 m-1 text-white cursor-pointer">Delete</button>
                 </td>
             </tr>
-            </tr>
+            {{/each}}
             </table>
     </div>
 
