--- a/src/views/manageExperience.hbs
+++ b/src/views/manageExperience.hbs
@@ -13,7 +13,7 @@ table, th, td {
     {{> navbarAdmin}}
 
     <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">MANAGE EXPERIENCE</h1>
-    <div class="container w-6xl ms-3 h-200 p-5 bg-white mt-20">
+    <div class="container w-6xl ms-3 p-5 bg-white mt-20  justify-self-center">
       <form action="" class="bg-white h-20 flex items-center mb-3">
         <button class="bg-blue-500 h-10 flex py-2 px-3 font-bold ms-3 text-white rounded-2xl">Add Experience +</button>
       </form>
