--- a/src/views/partials/navbarAdmin.hbs
+++ b/src/views/partials/navbarAdmin.hbs
@@ -7,7 +7,7 @@
     <div class="mt-2 w-full md:block md:w-auto flex justify-center text-sm" id="navbar-default">
       <ul class="font-medium flex flex-col items-center p-4 md:p-0 md:flex-row md:space-x-6 rtl:space-x-reverse md:mt-0 md:border-0">
         <li>
-          <a href="/manageStack" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Tech Stack</a>
+          <a href="/managestack" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Tech Stack</a>
         </li>
         <li>
           <a href="/manageexperience" class="text-gray-500 rounded-sm md:border-0 hover:text-black md:p-0 md:dark:hover:bg-transparent font-normal">Experience</a>
@@ -21,6 +21,10 @@
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 0 1-.5-17.986V3c-.354.966-.5 1.911-.5 3a9 9 0 0 0 9 9c.239 0 .254.018.488 0A9.004 9.004 0 0 1 12 21Z" />
             </svg>
           </button>
+        </li>
+        <li class="flex items-center">
+          <img src="assets/icon/account.png" class="w-8" alt="Ini" />
+          <span class="font-bold text-xl">Nama</span>
         </li>
         <button type="button" class="cursor-pointer text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Logout</button>
       </ul>
