--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -29,7 +29,7 @@
   <button type="submit" class="cursor-pointer w-[200px] text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Login</button>
   </div>
 </form>
-<h6 class="text-center italic mt-2">Don't have an account yet? <a href="/register" class="font-bold not-italic">Register</a> </h6>
+<h6 class="text-center italic mt-2">Don't have an account yet? <a href="/register" class="font-bold not-italic text-blue-600">Register</a> </h6>
 </div>
 </div>
     {{> footer }}
