--- a/src/views/manageStack.hbs
+++ b/src/views/manageStack.hbs
@@ -13,16 +13,16 @@ table, th, td {
     {{> navbarAdmin}}
 
     <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">MANAGE STACK</h1>
-    <div class="container w-3xl ms-3 p-5 bg-white mt-20 justify-self-center">
+    <div class="container w-3xl ms-3 p-10 bg-white mt-20 justify-self-center">
       <form action="" class="bg-white h-20 flex items-center mb-3" enctype="multipart/form-data" method="post">
-        <div class="upload items-center flex">
-        <input name="stack-icon" class="h-10 me-1 text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none" id="file_input" type="file">
-        <input name="name_stack" class="h-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 dark:text-gray-400 focus:outline-none" id="name_stack" type="text">
+        <div class="upload items-center flex gap-3">
+        <input name="name_stack" class="text-center w-60 h-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 dark:text-gray-400 focus:outline-none" id="name_stack" type="text" placeholder="Techstack Name">
+        <input name="stack-icon" class="w-55 h-10 me-1 text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50" id="file_input" type="file">
         </div>
-        <button class="bg-blue-500 h-10 flex py-2 px-3 font-bold ms-3 text-white rounded-2xl cursor-pointer hover:bg-blue-700">Add +</button>
+        <button class="bg-blue-500 h-10 flex py-2 px-4 font-bold ms-3 text-white rounded-2xl cursor-pointer hover:bg-blue-700">Submit Techstack +</button>
       </form>
             <table class="w-full">
-            <tr>
+            <tr class="h-10">
                 <th>No.</th>
                 <th>Image</th>
                 <th>Description</th> 
