--- a/src/views/manageproject.hbs
+++ b/src/views/manageproject.hbs
@@ -13,30 +13,30 @@ table, th, td {
     {{> navbarAdmin}}
 
     <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">MANAGE PROJECTS</h1>
-    <div class="container w-6xl ms-3 p-5 bg-white mt-20 justify-self-center">
-      <form action="" class="bg-white h-20 flex items-center mb-3">
-        <button class="bg-blue-500 h-10 flex py-2 px-3 font-bold ms-3 text-white rounded-2xl">Add Project +</button>
-      </form>
+    <div class="container w-6xl ms-3 p-10 bg-white mt-20 justify-self-center">
+      <a href="/addproject" class="bg-white h-20 flex items-center mb-3">
+        <button class="bg-blue-500 hover:bg-blue-700 h-10 flex py-2 px-3 font-bold ms-3 text-white rounded-2xl cursor-pointer">Add Project +</button>
+      </a>
             <table class="w-full">
-            <tr>
-                <th class="w-[20px]">No.</th>
-                <th class="w-[100px]">Name</th>
-                <th class="w-[100px]">Description</th> 
-                <th class="w-[150px]">Tech Use</th> 
-                <th class="w-[20px]">Github Link</th> 
-                <th class="w-[10px]">Demo Link</th> 
-                <th class="w-[50px]">Image</th> 
-                <th class="w-[150px]">Action</th>
+            <tr class="h-10">
+                <th class="">No.</th>
+                <th class="">Name</th>
+                <th class="">Description</th> 
+                <th class="">Tech Use</th> 
+                <th class="">Github Link</th> 
+                <th class="">Demo Link</th> 
+                <th class="">Image</th> 
+                <th class="">Action</th>
             </tr>
             <tr class="">
                 <td class="text-center">1</td>
-                <td class="">Fakturly</td>
-                <td class="">Digital Invoice blaa.. blaa...</td>
-                <td class="">JavaScript, React, Node.js, Express, PostgreSQL</td>
-                <td class="">https://github.io</td>
-                <td class="">https://demo.fakturly.com</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[100px]">Fakturly</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[150px]">Digital Invoice blaa.. blaa...</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[150px]">JavaScript, React, Node.js, Express, PostgreSQL</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[20px]">https://github.io</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[50px]">https://demo.fakturly.com</td>
                 <td class=""><img src="../assets/icon/account.png" class="w-10" alt=""></td>
-                <td class="text-center">
+                <td class="text-center truncate whitespace-nowrap overflow-hidden max-w-[150px]">
                     <button class="px-3 bg-yellow-500 m-1 text-white cursor-pointer">Edit</button>
                     <button  class="px-3 bg-red-700 m-1 text-white cursor-pointer">Delete</button>
                 </td>
