--- a/src/views/manageStack.hbs
+++ b/src/views/manageStack.hbs
@@ -34,11 +34,11 @@ table, th, td {
                 <td class=""><img src="/assets/tech/{{ this.icon_tech }}" class="w-10" alt=""></td>
                 <td class="">{{ this.name_tech }}</td>
                 <td class="text-center flex">
-                  <form action="/edit" >
+                  <a href="/editstack/{{ this.id }}">
                     <button class="px-3 bg-yellow-500 m-1 text-white cursor-pointer">Edit</button>
-                  </form>
-                  <form action="">
-                    <button  class="px-3 bg-red-700 m-1 text-white cursor-pointer">Delete</button>
+                  </a>
+                  <form method="post" action="/delete/{{ this.id }}" onsubmit="return confirm('Yakin mau dihapus?')">
+                    <button type="submit" class="px-3 bg-red-700 m-1 text-white cursor-pointer">Delete</button>
                   </form>
                 </td>
             </tr>
