--- a/src/views/addexperience.hbs
+++ b/src/views/addexperience.hbs
@@ -48,11 +48,14 @@ table, th, td {
                 <input name="start-date" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="start-date" type="date">
                 <input name="end-date" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="end-date" type="date">
             </div>
+            <div>
+               <p class="text-gray-600 italic text-sm mt-1">Leave the End Date blank if you are still working here </p>
+            </div>
             </div>
             <div class="items-center mt-5">
             <label for="comp-image" class="font-bold text-3xl">Image</label>
             <div class="">
-                <input name="comp-image" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="comp-image" type="date">
+                <input name="comp-image" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="comp-image" type="file">
             </div>
             </div>
         <button class="bg-blue-500 flex py-3 px-4 font-bold ms-3 mt-30 text-white rounded-2xl justify-self-end me-3 cursor-pointer hover:bg-blue-700">Submit Experience +</button>
