--- a/src/views/manageExperience.hbs
+++ b/src/views/manageExperience.hbs
@@ -34,18 +34,39 @@ table, th, td {
                 <td class="text-center">1</td>
                 <td class="truncate whitespace-nowrap overflow-hidden max-w-[100px]">{{ this.tittle }}</td>
                 <td class="truncate whitespace-nowrap overflow-hidden max-w-[100px]">{{ this.company }}</td>
-                <td class="">{{ this.jobdesc }}</td>
-                <td class="">{{ this.tech_use }}</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[100px]">{{ this.jobdesc }}</td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[100px]">{{ this.tech_use }}</td>
                 <td class="truncate whitespace-nowrap overflow-hidden max-w-[60px]">{{ this.start_date }}</td>
                 <td class="truncate whitespace-nowrap overflow-hidden max-w-[60px]">{{ this.end_date }}</td>
-                <td class="truncate whitespace-nowrap overflow-hidden max-w-[50px]"><img src="../assets/icon/{{ this.image }}" class="w-10" alt=""></td>
+                <td class="truncate whitespace-nowrap overflow-hidden max-w-[50px]"><img src="../../uploads/experience/{{ this.image }}" class="w-10" alt=""></td>
                 <td class="text-center max-w[100px]">
-                    <button class="px-3 bg-yellow-500 m-1 text-white">Edit</button>
-                    <button  class="px-3 bg-red-700 m-1 text-white">Delete</button>
+                  <a href="">
+                    <button class="px-3 bg-yellow-500 m-1 text-white cursor-pointer">Edit</button>
+                  </a>
+                    <form action="/delete-experience/{{ this.id }}" method="post"  onsubmit="return confirm('Yakin mau dihapus?')">
+                        <button  class="px-3 bg-red-700 m-1 text-white cursor-pointer">Delete</button>
+                    </form>
                 </td>
             </tr>
               {{/each}}
             </table>
+              {{#each hasil}}
+                <div>
+                  <h3>{{this.tittle}}</h3>
+                  <p>{{this.company}}</p>
+                  <p>{{this.start_date}}</p>
+                  <p>{{this.end_date}}</p>
+                  <img class="w-50" src="../../uploads/experience/{{this.image}}" alt="">
+
+                  <div>
+                    <strong>Tech Stacks:</strong>
+                    {{#each this.tech_use}}
+                      <p>{{this}}</p>
+                    {{/each}}
+                  </div>
+                </div><br>
+              {{/each}}
+
             </div>
 
 
