--- a/src/views/addexperience.hbs
+++ b/src/views/addexperience.hbs
@@ -13,7 +13,7 @@ table, th, td {
     {{> navbarAdmin }}
     <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">ADD EXPERIENCE</h1>
     <div class="container w-6xl ms-3 justify-self-center mt-20">
-      <form action="/submit-experience" method="post" enctype="multipart/form-data" class="mb-3 p-10 h-160 bg-white columns-2">
+      <form action="/addexperience" method="post" enctype="multipart/form-data" class="mb-3 p-10 h-160 bg-white columns-2">
         <div class="items-center mt-5">
             <label for="tittle" class="font-bold text-3xl">Tittle</label><br>
             <input placeholder="Backend Developer" name="tittle" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="tittle" type="text">
@@ -35,12 +35,12 @@ table, th, td {
         <div class="items-center mt-5">
             <label for="techstack" class="font-bold text-3xl">Techstack</label>
             <div class="grid grid-cols-2 w-100 gap-3">
-            <input placeholder="Techstack 1" name="techstack1" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
-            <input placeholder="Techstack 2" name="techstack2" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
-            <input placeholder="Techstack 3" name="techstack3" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
-            <input placeholder="Techstack 4" name="techstack4" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
-            <input placeholder="Techstack 5" name="techstack5" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
-            <input placeholder="Techstack 6" name="techstack6" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
+            <input placeholder="Techstack 1" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
+            <input placeholder="Techstack 2" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
+            <input placeholder="Techstack 3" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
+            <input placeholder="Techstack 4" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
+            <input placeholder="Techstack 5" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
+            <input placeholder="Techstack 6" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
             </div>
             <div class="items-center mt-5">
             <label for="" class="font-bold text-3xl">Date</label>
