--- a/src/views/addproject.hbs
+++ b/src/views/addproject.hbs
@@ -7,10 +7,10 @@
     {{> navbarAdmin }}
     <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">ADD PROJECT</h1>
     <div class="container w-6xl ms-3 justify-self-center mt-20">
-      <form action="/submit-experience" enctype="multipart/form-data" class="mb-3 p-10 h-150 bg-white columns-2">
+      <form method="post" action="/addproject" enctype="multipart/form-data" class="mb-3 p-10 h-150 bg-white columns-2">
         <div class="items-center mt-5">
-            <label for="project-name" class="font-bold text-3xl">Project Name</label><br>
-            <input placeholder="Facturly" name="project-name" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="project-name" type="text">
+            <label for="projectName" class="font-bold text-3xl">Project Name</label><br>
+            <input placeholder="Facturly" name="projectName" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="projectName" type="text">
         </div>
         <div class="mt-5">
             <label for="description" class="font-bold text-3xl">Description</label><br>
@@ -28,24 +28,24 @@
             <input placeholder="Tech 6" name="techstack" class="px-5 h-10 w-50 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="techstack" type="text">
             </div>
             <div class="items-center mt-5">
-            <label for="github-link" class="font-bold text-3xl">Github Link</label>
+            <label for="githubLink" class="font-bold text-3xl">Github Link</label>
             <div class="flex w-100">
-                <input name="github-link" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="github-link" type="text">
+                <input name="githubLink" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="githubLink" type="text">
             </div>
             </div>
             <div class="items-center mt-5">
-            <label for="demo-link" class="font-bold text-3xl">Demo Link</label>
+            <label for="demoLink" class="font-bold text-3xl">Demo Link</label>
             <div class="flex w-100">
-                <input name="demo-link" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="demo-link" type="text">
+                <input name="demoLink" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none" id="demoLink" type="text">
             </div>
             </div>
             <div class="items-center mt-5">
-            <label for="comp-image" class="font-bold text-3xl">Image</label>
+            <label for="project-image" class="font-bold text-3xl">Project Image</label>
             <div class="">
-                <input name="comp-image" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none cursor-pointer" id="comp-image" type="file">
+                <input name="project-image" class="mt-2 px-5 h-10 w-100 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:outline-none cursor-pointer" id="project-image" type="file">
             </div>
             </div>
-        <button class="bg-blue-500 flex py-3 px-4 font-bold ms-3 mt-30 text-white rounded-2xl justify-self-end me-3 cursor-pointer hover:bg-blue-700">Submit Project +</button>
+        <button type="submit" class="bg-blue-500 flex py-3 px-4 font-bold ms-3 mt-30 text-white rounded-2xl justify-self-end me-3 cursor-pointer hover:bg-blue-700">Submit Project +</button>
       </form>
     </div>
 
