--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -8,15 +8,18 @@
 <div class="container flex min-h-screen items-center justify-center">
 <div class="wrapper bg-white p-[50px] rounded-lg">
 <h5 class="text-center mb-10 font-bold text-[20px]">Login to Dashboard</h5>
-<form class="mx-auto w-[300px]">
+<form class="mx-auto w-[300px]" action="/login" method="post">
   <div class="mb-5">
     <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
-    <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@gmail.com" required />
+    <input type="email" id="email" name="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@gmail.com" required />
   </div>
   <div class="mb-5">
     <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Password</label>
     <div class="relative">
-    <input type="password" id="password" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+    <input type="password" name="password" id="password" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" required />
+    {{#if message}}
+      <p class="text-red-600 italic text-center">{{message}}</p>
+    {{/if}}
    <button
     type="button"
     id="togglePassword"
