--- a/src/views/partials/navbarAdmin.hbs
+++ b/src/views/partials/navbarAdmin.hbs
@@ -24,11 +24,13 @@
         </li>
         <li class="flex items-center">
           <div class="w-8 h-8 overflow-hidden">
-            <img src="../../../uploads/profilephoto/1749048404237.png" class="rounded-4xl w-full h-full object-cover" alt="Ini" />
+            <img src="../../../uploads/profilephoto/{{user.foto}}" class="rounded-4xl w-full h-full object-cover" alt="Ini" />
           </div>
-          <span class="inline-block font-semibold text-xl ms-1.5 whitespace-nowrap overflow-hidden max-w-[100px]">{{hasil.name}}</span>
+          <span class="inline-block font-semibold text-xl ms-1.5 whitespace-nowrap overflow-hidden max-w-[100px]">{{user.name}}</span>
         </li>
-        <button type="button" class="cursor-pointer text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Logout</button>
+        <a href="/logout">
+          <button type="button" class="cursor-pointer text-white bg-red-700 hover:bg-red-800 focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Logout</button>
+        </a>
       </ul>
     </div>
   </div>
