--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -16,6 +16,9 @@
   <div class="mb-5">
     <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
     <input type="email" id="email" name="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@gmail.com" required />
+    {{#if message}}
+        <p class="text-red-600 italic text-center">{{message}}</p>
+    {{/if}}
   </div>
   <div class="mb-5">
     <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Password</label>
