Kamis, 5 Juni 2025 (Sesi 2): "Hari ini sampai sini dulu, niat mau tidur awal karena besok presentasi, malah begadang karena susah tidur kepikiran besok"

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="scroll-smooth">
-{{> head }}
+{{> headIndex }}
   </head>
   <body id="home" class="pt-16 ps-15 pe-15">
 {{> navbar}}
