--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -12,19 +12,19 @@
           <a href="/manageStack">
           <div class="card p-3 w-50 h-50 text-white font-semibold bg-green-500 ms-3 my-1 py-1 px-3 rounded-xl">
             <span class="mt-5">Stacks: </span><br>
-            <span class="text-5xl flex justify-center mt-10">11</span>
+            <span class="text-5xl flex justify-center mt-10">{{stack}}</span>
           </div>
           </a>
           <a href="/manageexperience">
           <div class="card p-3 w-50 h-50 text-white font-semibold bg-cyan-500 ms-3 my-1 py-1 px-3 rounded-xl">
             <span class="mt-5">Experiences: </span><br>
-            <span class="text-5xl flex justify-center mt-10">3</span>
+            <span class="text-5xl flex justify-center mt-10">{{experience}}</span>
           </div>
           </a>
           <a href="/manageproject">
           <div class="card p-3 w-50 h-50 text-white font-semibold bg-pink-500 ms-3 my-1 py-1 px-3 rounded-xl">
             <span class="mt-5">Projects: </span><br>
-            <span class="text-5xl flex justify-center mt-10">7</span>
+            <span class="text-5xl flex justify-center mt-10">{{project}}</span>
           </div>
           </a>
           </div>
