Update: Sudah bisa read dengan filtering data dari database berdasarkan user yang login

--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -4,8 +4,7 @@
   </head>
   <body class="bg-blue-50">
     {{> navbarAdmin }}
-
-      <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">ADMIN DASHBOARD</h1>
+      <h1 class="text-black mt-[100px] flex justify-center text-3xl font-bold">PROFILE DASHBOARD</h1>
       <h3 class="font-bold text-2xl mt-10 mb-5 flex justify-center">Summary:</h3>
       <div class="container flex justify-center">
         <div class="summary flex">
